components/victoria-logs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: victoria-logs-vmauth
  namespace: victoria-logs
  annotations:
    kube-vip.io/loadbalancerIPs: 192.168.13.11
spec:
  ingressClassName: cilium
  rules:
  - host: victoria-logs.nekropolis.irminsul
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: victoria-logs-vmauth
            port:
              number: 8427
